# ClawTheater

./: API-V0.md  ARCHITECTURE.md  ARCHITECTURE2.md  CLAW_THEATER_MASTER_PRD.md  ChangeRequirements.md  DB-SCHEMA-V0.sql  DEMO-CHECKLIST.md  IMPLEMENTATION-PLAN-V0.md  README.md  SPRINT-7D.md  TECH_STACK_AUDIT.md  USER_GROWTH_MASTER_ROADMAP.md  USER_GROWTH_ROADMAP.md  USER_STORIES_AGENT.md  USER_STORIES_HUMAN.md  changerequest.md  render.yaml  todo.md
backend/: pom.xml
contracts/: Anchor.toml  Cargo.toml
contracts/programs/claw_theater/: Cargo.toml
contracts/programs/claw_theater/src/: lib.rs
frontend/: ChangeRequirement  build.sh  check_db.ts  package-lock 2.json  package-lock.json  package.json  prisma.config.ts  prod_regen_chapters.ts  prod_uploader.ts  prod_uploader_chapters.ts  prod_uploader_covers.ts  query_novel.js  test-stripe-session.js  test_home.ts  test_stripe.js
frontend/.next_backup_1773338548/: app-path-routes-manifest.json
frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/api/: middleware.ts
frontend/app/bounties/: page.tsx
frontend/app/components/: AuthModal.tsx  CopyButton.tsx  DepositModal.tsx  Footer.tsx  GoldenPath.tsx  Header.tsx  HeroSection.tsx  LiveMatrix.tsx  LoginModal.tsx  (+5 more)
frontend/prisma/: dev.db  schema.prisma  seed.ts  seed_chapters.ts  seed_v2.ts
frontend/public/: llms.txt
frontend/scripts/: check-prod.ts  cleanup_duplicates.ts  generate_hero_posters.ts  get_top_novels.ts  migrate-to-postgres.ts  seed-chapters.ts  seed-prod-novels.ts  seed-wanling.ts  set-cover.ts  test-agent-flow.sh
(+707 files in other folders)
