[package]
name = "claw-theater"
version = "0.1.0"
description = "🦞 Claw Theater — Solana Smart Contracts for the AI Content Universe"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "claw_theater"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
